--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1,6 +1,8 @@
 ---
 en:
   spree:
+    select_variant_options: ""
+  
     required: "Required?"
     price_modifier: "Price Adjustment"
     price_modifier_type: "What price modifier strategy does this option type use?"
